Git_WGBH_QC/src/objects/Member_Benefit__c.object
<CustomObject>
    <description>Member Discount Partners offer discounts to the WGBH members, you can view which Organizations offer discounts by searching on an Organization name.</description>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <description>Account Manager for Member Discount Partner Relationship</description>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Member_Discount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BenefitImage__c</fullName>
        <label>Benefit Image</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Benefit_Link__c</fullName>
        <description>This can be a link to the Business Member Partner page or a link to a benefit page.</description>
        <label>Benefit Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Business_Member_Partner__c</fullName>
        <description>Business Member Partner associated with offer benefit</description>
        <inlineHelpText>Business Member Partner associated with offer benefit</inlineHelpText>
        <label>Business Member Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Member_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category&apos;s associated with member benefit</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Up-to-the-minute Additions</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Education &amp; Family Fun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Performances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel &amp; Recreation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Member Benefit</description>
        <inlineHelpText>Description of Member Ben</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Ending date of member benefit</description>
        <inlineHelpText>Ending date of member benefit</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Member Benefit featured?</description>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo_Url__c</fullName>
        <description>This is the URL for the logo. This field is automatically populated by the image upload.</description>
        <inlineHelpText>This is the URL for the logo. This field is automatically populated by the image upload.</inlineHelpText>
        <label>Logo Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Copy__c</fullName>
        <label>Marketing Copy</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Starting date of member benefit</description>
        <inlineHelpText>Starting date of member benefit</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Two_Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top Two Featured</label>
        <type>Checkbox</type>
    </fields>
    <label>Member Discount Organization</label>
    <listViews>
        <fullName>All_Member_Benefits</fullName>
        <columns>Business_Member_Partner__c</columns>
        <columns>NAME</columns>
        <columns>Benefit_Link__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>BenefitImage__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Featured__c</columns>
        <columns>Top_Two_Featured__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Member Benefits</label>
    </listViews>
    <nameField>
        <label>Member Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member Discount Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>